--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -7,16 +7,15 @@
     <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/01-gallery.css" />
-      <!-- <link rel="stylesheet" href="/node_modules/simplelightbox/dist/simple-lightbox.css">-->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.3/simple-lightbox.min.css" /> -->
 
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <!-- Add gallery items to this list 
+    <!-- Add gallery items to this list -->
     <div class="gallery"></div>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.3/simple-lightbox.min.js"></script> -->
     <script src="js/01-gallery.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
-
   </body>
 </html>
